
  16 Apr 2007; Christian Faulhammer <opfer@gentoo.org> -elisp.eclass,
  -elisp-common.eclass:
  removed as they are in Portage now

  14 Apr 2007; Ulrich Mueller <ulm@gentoo.org> elisp-common.eclass:
  E-mail address updated.

  11 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> elisp-common.eclass:
  Document arguments of elisp-make-autoload-file().

  10 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> elisp-common.eclass:
  Documentation change: use ${PN} in name of SITEFILE.

  10 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> elisp-common.eclass:
  New function elisp_make_autoload_file().

  10 Apr 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  document SIMPLE_ELISP

  08 Apr 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  remove SRC_URI pointing to mkennedy's devspace

  30 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> elisp-common.eclass:
  Honour ${ROOT} in elisp-site-regen().

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org> elisp-common.eclass:
  Updated documentation on site-lisp dir.
  rephrased the fact that it is no real eclass
	
  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  documented
  added some quotes to prevent variables with spaces to break commands
  removed local Emacs variables

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org> elisp-common.eclass:
  documented
  added some quotes to prevent variables with spaces to break commands
  straightened elisp-comp()
  removed local Emacs variables